# 42.webserv

./: .gitignore  CMakeLists.txt  ConfigFileParser.cpp  ConfigFileParser.h  LEAK  LOOPS  Makefile  README.md  TODOs.txt  TODOs.txt~  TimerLeak.txt  confiFileTester  crash-2-browsers-request  crash-2-browsers-request-2.0  index_post_form.html  log.txt  main.cpp  manualShutDownLeak.txt  new.conf  server_example_client.c  siege.conf  standard_Corina.conf  standard_complete.conf  standard_complete_JakaLaptop.conf  standard_complete_forTester.conf  standard_complete_simple.conf  standard_jakaLaptop.conf  webserv
_jaka_temp/: _example_writeFromFile.cpp  nginx.conf  temp.txt
_oldFolders/: README.md
_server_default_status/: 400BadRequest.html  403Forbidden.html  404NotFound.html  405MethodNotAllowed.html  408RequestTimeout.html  413ContentTooLarge.html  500InternalServer.html  504GatewayTimeout.html
concepts/: .gitignore  Makefile  kqueue.c  kqueue.cpp  kqueue.hpp  kqueue1.c  kqueue_tutorial.c  kqueue_version2.c  non_blocking.c  poll.c  serverExample.cpp  server_example_client.c  sockets.cpp
includes/: CgiData.hpp  ConfigFileParser.hpp  LocationData.hpp  Logger.h  ParseURLpath.hpp  Parser.hpp  RequesParser.hpp  RequestData.hpp  RequestData_orig.hpp  RequestFileParser.hpp  RequestParser.hpp  RequestParserURLpath.hpp  RequestParser_orig.hpp  ResponseData.hpp  ServerData.hpp  ServerLocation.hpp  WebServer.hpp  parseURLpathMAYBENOTNEEDED.hpp
jaka_request_parser/: standard_complete.conf
kqueue_in_progress/: Makefile  (+4 more)
kqueue_in_progress-rewrite/: Kqueue.cpp  Makefile
(+330 files in other folders)
